# systemstat-warp

./: .gitignore  Cargo.toml  LICENSE  README.md  app.toml
html/: index.html
src/: lib.rs  routes.rs  web.rs
src/cipher/: cipher_256.rs  cipher_512.rs  mod.rs
src/config/: app_config.rs  mod.rs  user_config.rs
src/handler/: db_handler.rs  logger_handler.rs  mod.rs  redis_handler.rs  web_handler.rs
src/sys_stat/: mod.rs  sys_battery_life.rs  sys_boot_time.rs  sys_cpu_load.rs  sys_load_aggregate.rs  sys_memory.rs  sys_mounts.rs  sys_networks.rs  sys_sockets.rs  sys_swap.rs  sys_up_time.rs
template/: index.html
tests/: cipher_test.rs  system_test.rs
