[package]
name = "systemstat-warp"
version = "1.0.0"
edition = "2021"
authors = ["MeteorCat <guixin2010@live.cn>"]
keywords = ["systemstat", "warp"]
license = "MIT"
readme = "README.md"

[lib]
path = "src/lib.rs"


[[bin]]
name = "systemstat-warp-cli"
path = "src/bin/main.rs"

[dependencies]
log = { version = "0.4.19" }
simple_logger = { version = "4.2.0" }
chrono = { version = "0.4.26" }
serde = { version = "1.0.179", features = ["derive"] }
toml = { version = "0.7.6" }
serde_json = { version = "1.0.104" }
tokio = { version = "1.29.1", features = ["full"] }
warp = { version = "0.3.5" }
systemstat = { version = "0.2.3" }
lazy_static = { version = "1.4.0" }
